--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,69 @@
 }
 
 body{
-    font-family: 'Space Mono', monospace;
     background: #F6F8FF;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Space Mono', monospace;
+}
+
+.container{
+    width: 730px;
+}
+
+.header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 36px;
+}
+
+.theme-selector-btn{
+    display: flex;
+    gap: 16px;
+    align-items: center;
+    border: none;
+    background-color: transparent;
+}
+
+.search-form{
+    padding: 10px 10px 10px 32px;
+    border-radius: 15px;
+    background: #FEFEFE;
+    box-shadow: 0px 16px 30px -10px rgba(70, 96, 187, 0.20);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 24px;
+}
+
+.search-input{
+    font-family: 'Space Mono', monospace;
+    width: 100%;
+    border: none;
+    padding-left: 23px;
+    outline: none;
+    font-size: 18px;
+    line-height: 25px;
+}
+
+.search-input:focus{
+    outline: none;
+}
+
+.search-input::-webkit-search-cancel-button {
+    display: none;
+}
+
+.search-btn{
+    font-family: 'Space Mono', monospace;
+    border-radius: 10px;
+    background: #0079FF;
+    padding: 13px 24px;
+    border: none;
+    color: #FFF;
+    font-size: 16px;
+    font-weight: 700;
 }
