Boş gelen bilgiler için opacity ayarlandı.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,6 +172,14 @@ button{
     font-size: 15px;
 }
 
+a{
+    text-decoration: none;
+}
+
+a:hover{
+    text-decoration: underline;
+}
+
 /* No user Found */
 
 .error{
