Search'te autofill durumunda kötü bir background rengi oluşuyordu bunu engellemek için autofill pseudo class ında bazı değişiklikler yapıldı. Console.log'lar temizlendi.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,6 +86,15 @@ button{
     font-weight: 700;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: #ffffff;
+    transition: background-color 5000s ease-in-out;
+}
+
 /* Card Styling */
 .card-container{
     border-radius: 15px;
